# docker-send-test-email

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py
